<resources>
    <string name="app_name" translatable="false">Nōto</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="time_creation">Creation</string>
    <string name="time_modification">Last modification</string>
    <string name="time_access">Last access</string>
    <string name="time_deadline">Deadline</string>
    <string name="note_title">Title</string>
    <string name="note_contents">Note contents…</string>
    <string name="enter_pin_title">Enter your PIN</string>
    <string name="deadline_at">Deadline at %s</string>
    <string name="set_deadline">Set deadline</string>
    <string name="note_delete_confirm">Do you want to delete this note?</string>
    <string name="note_delete_confirm_named">"Do you want to delete \"%s\"?</string>
    <string name="pin_length_exceeded">You\'ve exceeded the maximum PIN length</string>
    <string name="pin_too_long">You can\'t set your PIN longer than %d digits</string>
    <string name="pin_too_short">The PIN has to be at least %d digits long</string>
    <string name="verify_pin">Verify the PIN you entered</string>
    <string name="pin_set">Set PIN code</string>
    <string name="pin_changed">Changed PIN code</string>
    <string name="pin_mismatch">The PIN codes don\'t match. Enter and verify your PIN again</string>
    <string name="pin_removed">Removed PIN code</string>
    <string name="label_no_pin">You can secure your notes with a PIN code</string>
    <string name="label_pin_set">Your notes are secured with a PIN code</string>
    <string name="change_pin">Change PIN code</string>
    <string name="add_pin">Add PIN code</string>
    <string name="verify_identity_to_change">Verify your identity to proceed changing the PIN code</string>
    <string name="verify_identity_to_remove">Verify your identity to proceed removing the PIN code</string>
    <string name="enter_new_pin">Enter your new PIN</string>
    <string name="theme_label">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="sort_order_label">Sort order</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_by_label">Sort by the time of</string>
    <string name="remove_pin">Remove PIN code</string>
    <string name="settings">Settings</string>
</resources>
