<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <TextView
        android:id="@+id/theme_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/theme_label"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/button_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        android:text="@string/theme_light"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/theme_label" />

    <RadioButton
        android:id="@+id/button_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        android:text="@string/theme_dark"
        app:layout_constraintStart_toEndOf="@+id/button_light"
        app:layout_constraintTop_toBottomOf="@+id/theme_label" />

    <TextView
        android:id="@+id/sort_order_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sort_order_label"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/button_light" />

    <RadioButton
        android:id="@+id/button_descending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        android:text="@string/sort_descending"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/sort_order_label" />

    <RadioButton
        android:id="@+id/button_ascending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        android:text="@string/sort_ascending"
        app:layout_constraintStart_toEndOf="@+id/button_descending"
        app:layout_constraintTop_toBottomOf="@+id/sort_order_label" />

    <TextView
        android:id="@+id/sort_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sort_by_label"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/button_descending" />

    <Spinner
        android:id="@+id/sort_by_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_label"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/pin_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        tools:text="Your notes are secured with a PIN code"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_spinner" />

    <Button
        android:id="@+id/set_pin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/pin_code_label"
        tools:text="Change PIN code" />

    <Button
        android:id="@+id/remove_pin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/remove_pin"
        app:layout_constraintStart_toEndOf="@+id/set_pin_button"
        app:layout_constraintTop_toTopOf="@+id/set_pin_button" />

</androidx.constraintlayout.widget.ConstraintLayout>